--- a/fancy-weather/src/style.scss
+++ b/fancy-weather/src/style.scss
@@ -3,3 +3,5 @@
 @import "App.scss";
 @import "./components/controls/controls";
 @import "./components/units/units";
+@import "./components/search/search";
+@import "./components//weather/weather";
