--- a/fancy-weather/src/style.scss
+++ b/fancy-weather/src/style.scss
@@ -5,3 +5,5 @@
 @import "./components/units/units";
 @import "./components/search/search";
 @import "./components//weather/weather";
+@import "./components/todayCard/todayCard";
+@import "./components/smallCard/smallCard";
