--- a/fancy-weather/src/style.scss
+++ b/fancy-weather/src/style.scss
@@ -7,3 +7,4 @@
 @import "./components//weather/weather";
 @import "./components/todayCard/todayCard";
 @import "./components/nextDayCard/nextDayCard";
+@import "./components/map/map";
