--- a/fancy-weather/src/components/map/_map.scss
+++ b/fancy-weather/src/components/map/_map.scss
@@ -1,7 +1,17 @@
 .mapContainer {
-  position: absolute;
-  top: 200;
-  right: 0;
-  left: 0;
-  bottom: 0;
+  // position: absolute;
+  // top: 200;
+  // right: 0;
+  // left: 0;
+  // bottom: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border-radius: 30px
+  }
+
+  .map {
+    // margin-right: 100px;
+    width: 400px;
+    height: 400px;
   }
