feat: clock add

--- a/fancy-weather/src/style.scss
+++ b/fancy-weather/src/style.scss
@@ -8,3 +8,4 @@
 @import "./components/todayCard/todayCard";
 @import "./components/nextDayCard/nextDayCard";
 @import "./components/map/map";
+@import "./components/clock/clock";
