--- a/fancy-weather/src/components/nextDayCard/_nextDayCard.scss
+++ b/fancy-weather/src/components/nextDayCard/_nextDayCard.scss
@@ -1,10 +1,22 @@
 .weather-future {
+  display: flex;
   color: #fff;
   width: 150px;
+  
+  // justify-content: center;
+  flex-wrap: wrap;
+  flex-flow: column;
+}
+
+.weather-future_item {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 5px;
 }
 
 
 .weather-icon-future {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
 }
