--- a/fancy-weather/src/components/search/_search.scss
+++ b/fancy-weather/src/components/search/_search.scss
@@ -15,11 +15,11 @@
 .search-button {
   background-color: transparent;
   border-radius: 5px;
-  border: 2px white solid;
+  border: 2px $main-color solid;
   outline: none;
   width: 40px;
   height: 40px;
-  color: #fff;
+  color: $main-color;
   cursor: pointer;
   margin-left: 3px;
   &:hover {
