--- a/fancy-weather/src/components/map/_map.scss
+++ b/fancy-weather/src/components/map/_map.scss
@@ -12,7 +12,7 @@
 
 .coords {
   display: flex;
-  color: #ffffff;
+  color: $main-color;
   justify-content: space-around;
   margin-bottom: 5px;
 }
