--- a/fancy-weather/src/App.scss
+++ b/fancy-weather/src/App.scss
@@ -1,13 +1,14 @@
 .root {
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-size: cover;
   background-position: center;
+  background-attachment:fixed;
 }
 
 .wrapper {
   margin: auto;
   max-width: 1000px;
+  height: fit-content;
 }
 
 .header {
@@ -19,4 +20,20 @@
 .weather-map-wrapper {
   display: flex;
   justify-content: space-between;
+}
+
+
+@media (max-width: 768px) {
+  .weather-map-wrapper {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .header {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 768px) {
+
 }
