--- a/fancy-weather/src/components/map/_map.scss
+++ b/fancy-weather/src/components/map/_map.scss
@@ -8,6 +8,8 @@
 .map {
   width: 400px;
   height: 400px;
+  min-width: 300px;
+  min-height: 300px;
 }
 
 .coords {
@@ -15,4 +17,13 @@
   color: $main-color;
   justify-content: space-around;
   margin-bottom: 5px;
+}
+
+@media (max-width: 768px) {
+  .map{
+    margin-top: 20px;
+    width: 370px;
+    height: 370px;
+    margin-bottom: 50px;
+  }
 }
