--- a/fancy-weather/src/components/clock/_clock.scss
+++ b/fancy-weather/src/components/clock/_clock.scss
@@ -1,3 +1,11 @@
 .clock {
   color: $main-color;
 }
+
+
+@media (max-width: 375px) {
+  .clock_date, .clock_day {
+    text-align: center;
+  }
+
+}
