--- a/fancy-weather/src/components/controls/_controls.scss
+++ b/fancy-weather/src/components/controls/_controls.scss
@@ -1,5 +1,8 @@
 .controls {
   display: flex;
+  flex-wrap: wrap-reverse;
+  align-items: center;
+  justify-content: center;
 }
 
 .update-button {
@@ -55,5 +58,11 @@ option {
   100% {
     -webkit-transform: rotate(450deg);
     transform: rotate(450deg);
+  }
+}
+
+@media (max-width: 470px) {
+  .search{
+    margin-left: 0 !important;
   }
 }
