feat: controls styles

--- a/fancy-weather/src/style.scss
+++ b/fancy-weather/src/style.scss
@@ -1,4 +1,5 @@
 @import "./sass/abstract/constants";
+@import "./sass/basic/basic";
 
 @import "App.scss";
 @import "./components/controls/controls";
